--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Al Aqsa Auto Transport - Professional Vehicle Shipping Nationwide</title>
   <meta name="description" content="Professional auto transport services nationwide. Licensed, insured vehicle shipping with real-time tracking. Get your free quote today!">
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./img/Al-aqsa-logo.jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -55,7 +56,7 @@
           </li>
 
           <li>
-            <a href="#products">Products</a>
+            <a href="products.html">Products</a>
             <!-- <ul class="dropdown">
               <li><a href="#">HTML</a></li>
               <li><a href="#">CSS</a></li>
@@ -65,7 +66,7 @@
           </li>
 
           <li>
-            <a href="#services">Services</a>
+            <a href="services.html">Services</a>
             <!-- <ul class="dropdown">
               <li><a href="#">HTML</a></li>
               <li><a href="#">CSS</a></li>
@@ -419,32 +420,32 @@
           </div>
           <div class="footer-box">
             <h3>Quick Links</h3>
-            <h4><a href="#quote-form">Get Free Quote</a></h4>
-            <h4><a href="#how-it-works">How It Works</a></h4>
-            <h4><a href="#about-us">About Us</a></h4>
-            <h4><a href="#services">Our Services</a></h4>
+            <h4><a href="index.html#quote-form">Get Free Quote</a></h4>
+            <h4><a href="index.html#how-it-works">How It Works</a></h4>
+            <h4><a href="about.html">About Us</a></h4>
+            <h4><a href="services.html">Our Services</a></h4>
           </div>
           <div class="footer-box">
             <h3>Services</h3>
-            <h4>Auto Transport</h4>
-            <h4>Open Carrier</h4>
-            <h4>Enclosed Carrier</h4>
-            <h4>Door-to-Door Delivery</h4>
+            <h4><a href="services.html">Auto Transport</a></h4>
+            <h4><a href="services.html#open-carrier">Open Carrier</a></h4>
+            <h4><a href="services.html#enclosed-carrier">Enclosed Carrier</a></h4>
+            <h4><a href="services.html#door-to-door">Door-to-Door Delivery</a></h4>
           </div>
           <div class="footer-box padding-footer">
             <h3>Contact Info</h3>
-            <h4><i class="fa-solid fa-phone"></i> 619-944-8954</h4>
-            <h4><i class="fa-solid fa-envelope"></i> decam9@gmail.com</h4>
+            <h4><i class="fa-solid fa-phone"></i> <a href="tel:6199448954">619-944-8954</a></h4>
+            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:decam9@gmail.com">decam9@gmail.com</a></h4>
             <h4><i class="fa-solid fa-location-dot"></i> 16038 3rd PI S Unit c <br> Burien, WA 98148</h4>
           </div>
         </div>
         <hr class="line">
         <div class="footer-bottom-text-flex">
           <p>© 2025 Al Aqsa. All rights reserved.</p>
-          <div class="footer-bottom-text-three">
-            <p>Privacy Policy</p>
-            <p>Terms of Service</p>
-            <p>DOT License</p>
+            <div class="footer-bottom-text-three">
+            <p><a href="privacy-policy.html">Privacy Policy</a></p>
+            <p><a href="terms-of-service.html">Terms of Service</a></p>
+            <p><a href="dot-license.html">DOT License</a></p>
           </div>
         </div>
       </div>
