--- a/dot-license.html
+++ b/dot-license.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms of Service - Al Aqsa Auto Transport</title>
-  <meta name="description" content="Terms of Service for Al Aqsa Auto Transport">
+  <title>DOT License - Al Aqsa Auto Transport</title>
+  <meta name="description" content="Department of Transportation licensing information for Al Aqsa Auto Transport">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
@@ -40,96 +40,78 @@
 
   <div class="wrapper">
     
-    <!-- Terms of Service Hero Section -->
+    <!-- DOT License Hero Section -->
     <section style="background: linear-gradient(135deg, #426fcf, #3a62b8); padding: 150px 0 80px; margin-top: 80px;">
       <div class="container">
         <div style="text-align: center; color: white;">
-          <h1 style="font-size: 48px; margin-bottom: 20px;">Terms of Service</h1>
-          <p style="font-size: 22px;">Last Updated: January 2025</p>
+          <h1 style="font-size: 48px; margin-bottom: 20px;">DOT License & Compliance</h1>
+          <p style="font-size: 22px;">Department of Transportation Certification</p>
         </div>
       </div>
     </section>
 
-    <!-- Terms of Service Content -->
+    <!-- DOT License Content -->
     <section style="padding: 80px 0;">
       <div class="container">
         <div style="max-width: 900px; margin: 0 auto;">
           
-          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Agreement to Terms</h2>
+          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">What is DOT Licensing?</h2>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
-            By accessing and using Al Aqsa Auto Transport's services, you agree to be bound by these Terms of Service 
-            and all applicable laws and regulations. If you do not agree with any of these terms, you are prohibited from 
-            using our services.
+            The U.S. Department of Transportation (DOT) regulates commercial vehicle transportation to ensure safety, 
+            compliance, and consumer protection. All commercial carriers engaged in interstate vehicle transportation 
+            must be registered with the Federal Motor Carrier Safety Administration (FMCSA) and maintain a valid DOT number.
           </p>
 
-          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Services</h2>
+          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Our Commitment to Compliance</h2>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
-            Al Aqsa Auto Transport provides vehicle transportation services throughout the United States. We act as a 
-            broker, connecting customers with licensed and insured carriers who provide the actual transportation services.
+            Al Aqsa Auto Transport works exclusively with carriers that maintain active DOT registration and proper 
+            licensing. We verify that all carriers in our network:
           </p>
-
-          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Pricing and Payment</h2>
-          <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
-            Quotes provided are estimates based on the information you provide. Final pricing may vary based on market 
-            conditions, fuel prices, and carrier availability. Payment is typically required at pickup or delivery as 
-            specified in your service agreement.
-          </p>
-
-          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Customer Responsibilities</h2>
-          <p style="font-size: 16px; line-height: 1.8; margin-bottom: 20px;">As a customer, you are responsible for:</p>
           <ul style="font-size: 16px; line-height: 1.8; margin-bottom: 30px; padding-left: 30px;">
-            <li>Providing accurate information about your vehicle and transportation needs</li>
-            <li>Ensuring the vehicle is accessible at the pickup location</li>
-            <li>Removing all personal items from the vehicle</li>
-            <li>Maintaining minimum fuel level (1/4 tank)</li>
-            <li>Ensuring the vehicle has working brakes and steering (for running vehicles)</li>
-            <li>Being present or having a representative present at pickup and delivery</li>
+            <li>Hold valid DOT numbers issued by the FMCSA</li>
+            <li>Maintain current motor carrier authority</li>
+            <li>Carry adequate insurance coverage (minimum $1,000,000 liability)</li>
+            <li>Have clean safety records and passing inspection ratings</li>
+            <li>Comply with all federal and state regulations</li>
+            <li>Employ licensed commercial drivers with clean records</li>
           </ul>
 
-          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Carrier Selection</h2>
+          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Why DOT Licensing Matters</h2>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
-            We work with independently licensed and insured carriers. While we conduct due diligence on our carrier 
-            partners, the actual transportation is performed by these third-party carriers who are solely responsible 
-            for their services.
+            DOT licensing is important because it:
           </p>
+          <ul style="font-size: 16px; line-height: 1.8; margin-bottom: 30px; padding-left: 30px;">
+            <li><strong>Ensures Safety:</strong> DOT regulations enforce vehicle maintenance standards, driver qualifications, and safety protocols</li>
+            <li><strong>Provides Accountability:</strong> Licensed carriers are tracked and held accountable for their safety record</li>
+            <li><strong>Protects Consumers:</strong> DOT registration requires proper insurance and bonding</li>
+            <li><strong>Maintains Standards:</strong> Regular inspections and compliance checks ensure industry standards are met</li>
+          </ul>
 
-          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Liability and Insurance</h2>
+          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Verifying Carrier Licensing</h2>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
-            Carriers must maintain commercial liability insurance. Damage claims must be reported immediately at delivery 
-            and documented on the Bill of Lading. Claims must be submitted within 48 hours of delivery. Our liability is 
-            limited to the direct damage caused during transport and is subject to carrier insurance coverage.
+            Before a carrier transports your vehicle, they will provide you with their DOT number. You can verify 
+            their licensing and safety record through:
           </p>
+          <ul style="font-size: 16px; line-height: 1.8; margin-bottom: 30px; padding-left: 30px;">
+            <li>Federal Motor Carrier Safety Administration (FMCSA) website: <a href="https://ai.fmcsa.dot.gov" target="_blank">ai.fmcsa.dot.gov</a></li>
+            <li>Carrier's website or credentials provided at pickup</li>
+            <li>Our customer service team can provide verification upon request</li>
+          </ul>
 
-          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Cancellations and Refunds</h2>
+          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Insurance Requirements</h2>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
-            Cancellation policies vary by carrier and service agreement. If you need to cancel, please notify us as soon 
-            as possible. Refund eligibility depends on the timing of cancellation and carrier policies. A cancellation fee 
-            may apply.
+            All DOT licensed carriers must maintain:
           </p>
+          <ul style="font-size: 16px; line-height: 1.8; margin-bottom: 30px; padding-left: 30px;">
+            <li><strong>Primary Liability Insurance:</strong> Minimum $1,000,000 for auto transporters</li>
+            <li><strong>Cargo Insurance:</strong> Coverage for damage or loss of transported vehicles</li>
+            <li><strong>Contingent Cargo Coverage:</strong> Additional protection offered by reputable brokers</li>
+          </ul>
 
-          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Limitation of Liability</h2>
+          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Questions About Licensing?</h2>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
-            To the maximum extent permitted by law, Al Aqsa Auto Transport shall not be liable for any indirect, 
-            incidental, special, consequential, or punitive damages arising from the use of our services or inability 
-            to use our services.
-          </p>
-
-          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Dispute Resolution</h2>
-          <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
-            Any disputes arising from these terms or our services shall be resolved through binding arbitration in 
-            accordance with the rules of the American Arbitration Association, except where prohibited by law.
-          </p>
-
-          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Changes to Terms</h2>
-          <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
-            We reserve the right to modify these Terms of Service at any time. Material changes will be posted on our 
-            website with an updated revision date. Continued use of our services after changes constitute acceptance 
-            of the modified terms.
-          </p>
-
-          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Contact Information</h2>
-          <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
-            If you have questions about these Terms of Service, please contact us:
+            If you have any questions about DOT licensing, carrier credentials, or our compliance procedures, 
+            please don't hesitate to contact us:
           </p>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
             Al Aqsa Auto Transport<br>
