--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </li>
 
           <li>
-            <a href="#about-us">About</a>
+            <a href="about.html">About</a>
             <!-- <ul class="dropdown">
               <li><a href="#">HTML</a></li>
               <li><a href="#">CSS</a></li>
@@ -219,12 +219,29 @@
               </div>
             </div>
 
+            <!-- SMS Consent -->
+            <div class="form-section">
+              <div class="form-group full-width">
+                <div style="border: 2px solid #000; padding: 20px; background-color: #fff; border-radius: 4px;">
+                  <div style="display: flex; align-items: flex-start; gap: 12px; margin-bottom: 12px;">
+                    <input type="checkbox" name="smsConsent" id="smsConsent" style="margin-top: 4px; width: 20px; height: 20px; cursor: pointer; flex-shrink: 0;">
+                    <label for="smsConsent" style="font-size: 14px; line-height: 1.6; color: #333; cursor: pointer; margin: 0; flex: 1;">
+                      By checking this box, you agree to receive text messages from Al Aqsa Auto Transport related to quote requests, shipment updates, and customer service communications at the phone number provided above. You may reply STOP to opt-out at any time. Reply HELP for assistance. Messages and data rates may apply. Message frequency will vary.
+                    </label>
+                  </div>
+                  <p style="font-size: 14px; line-height: 1.6; color: #333; margin: 0; padding-left: 32px;">
+                    Learn more on our <a href="privacy-policy.html" target="_blank" style="color: #426fcf; text-decoration: underline;">Privacy Policy Page</a> and <a href="terms-of-service.html" target="_blank" style="color: #426fcf; text-decoration: underline;">Terms & Conditions</a>.
+                  </p>
+                </div>
+              </div>
+            </div>
+
             <!-- Submit Button -->
             <div class="form-submit">
               <button type="submit" class="quote-submit-btn">
                 <i class="fa-solid fa-paper-plane"></i> Get My Free Quote
               </button>
-              <p class="form-disclaimer">By submitting this form, you agree to our terms of service and privacy policy.</p>
+              <p class="form-disclaimer">By submitting this form, you agree to our <a href="terms-of-service.html" style="color: #426fcf;">terms of service</a> and <a href="privacy-policy.html" style="color: #426fcf;">privacy policy</a>.</p>
             </div>
           </form>
         </div>
@@ -294,21 +311,21 @@
                 <p>All our carriers are fully licensed, <br> bonded, and insured with <br> comprehensive coverage up to
                   <br> $1M
                 </p>
-                <a href="#">DOT Certified Carriers</a>
+                <a href="dot-license.html">DOT Certified Carriers</a>
               </div>
               <div class="about-commet-box">
                 <i class="fa-solid fa-dollar-sign"></i>
                 <h3>Best Price Guarantee</h3>
                 <p>We work with you to find the best rates. <br> Competitive pricing with <br> no hidden fees or <br> unexpected charges
                 </p>
-                <a href="#">View Our Rates</a>
+                <a href="index.html#quote-form">View Our Rates</a>
               </div>
               <div class="about-commet-box">
                 <i class="fa-solid fa-clock"></i>
                 <h3>On-Time Delivery</h3>
                 <p>96% of our deliveries arrive on time. <br> We track your vehicle <br> every step of the way <br> with real-time updates
                 </p>
-                <a href="#">Track Your Vehicle</a>
+                <a href="services.html">Track Your Vehicle</a>
               </div>
             </div>
             <div class="about-commet-three-flex about-top">
@@ -317,21 +334,21 @@
                 <h3>Wide Coverage Area</h3>
                 <p>Nationwide auto transport services. <br> We deliver to all 48 states <br> and provide door-to-door <br> convenience
                 </p>
-                <a href="#">Service Areas</a>
+                <a href="services.html">Service Areas</a>
               </div>
               <div class="about-commet-box">
                 <i class="fa-solid fa-star"></i>
                 <h3>5-Star Service</h3>
                 <p>Rated 4.8/5 by our customers. <br> Professional drivers and <br> exceptional customer service <br> throughout the journey
                 </p>
-                <a href="#">Read Reviews</a>
+                <a href="index.html">Read Reviews</a>
               </div>
               <div class="about-commet-box">
                 <i class="fa-solid fa-headset"></i>
                 <h3>24/7 Support</h3>
                 <p>Round-the-clock assistance. <br> Our team is always ready <br> to help with any questions <br> or concerns
                 </p>
-                <a href="#">Contact Support</a>
+                <a href="mailto:decam9@hotmail.com">Contact Support</a>
               </div>
             </div>
           </div>
@@ -435,7 +452,7 @@
           <div class="footer-box padding-footer">
             <h3>Contact Info</h3>
             <h4><i class="fa-solid fa-phone"></i> <a href="tel:6199448954">619-944-8954</a></h4>
-            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:decam9@gmail.com">decam9@gmail.com</a></h4>
+            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a></h4>
             <h4><i class="fa-solid fa-location-dot"></i> 16038 3rd PI S Unit c <br> Burien, WA 98148</h4>
           </div>
         </div>
@@ -445,6 +462,7 @@
             <div class="footer-bottom-text-three">
             <p><a href="privacy-policy.html">Privacy Policy</a></p>
             <p><a href="terms-of-service.html">Terms of Service</a></p>
+            <p><a href="sms-terms.html">SMS Terms & Conditions</a></p>
             <p><a href="dot-license.html">DOT License</a></p>
           </div>
         </div>
