--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -83,12 +83,18 @@
             <li>To comply with legal obligations and protect our rights</li>
           </ul>
 
+          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">SMS and Phone Number Privacy</h2>
+          <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px; padding: 15px; background-color: #f9f9f9; border-left: 4px solid #426fcf; border-radius: 4px;">
+            <strong>SMS opt-in or phone numbers for the purpose of SMS are not being shared with any third party and affiliate company for marketing purposes.</strong>
+            Your phone number and SMS consent information will only be used by Al Aqsa Auto Transport for service-related communications as outlined in our SMS Terms & Conditions.
+          </p>
+
           <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Information Sharing and Disclosure</h2>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
             We do not sell your personal information. We may share your information with:
           </p>
           <ul style="font-size: 16px; line-height: 1.8; margin-bottom: 30px; padding-left: 30px;">
-            <li><strong>Service Providers:</strong> Third-party carriers and partners who perform services on our behalf</li>
+            <li><strong>Service Providers:</strong> Third-party carriers and partners who perform services on our behalf (Note: SMS opt-in and phone numbers are not shared with third parties for marketing purposes)</li>
             <li><strong>Business Transfers:</strong> In connection with a merger, acquisition, or sale of assets</li>
             <li><strong>Legal Requirements:</strong> When required by law or to protect our legal rights</li>
           </ul>
@@ -132,7 +138,7 @@
             16038 3rd PI S Unit c<br>
             Burien, WA 98148<br>
             Phone: <a href="tel:6199448954">(619) 944-8954</a><br>
-            Email: <a href="mailto:decam9@gmail.com">decam9@gmail.com</a>
+            Email: <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a>
           </p>
 
         </div>
@@ -170,7 +176,7 @@
           <div class="footer-box padding-footer">
             <h3>Contact Info</h3>
             <h4><i class="fa-solid fa-phone"></i> <a href="tel:6199448954">619-944-8954</a></h4>
-            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:decam9@gmail.com">decam9@gmail.com</a></h4>
+            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a></h4>
             <h4><i class="fa-solid fa-location-dot"></i> 16038 3rd PI S Unit c <br> Burien, WA 98148</h4>
           </div>
         </div>
@@ -180,6 +186,7 @@
           <div class="footer-bottom-text-three">
             <p><a href="privacy-policy.html">Privacy Policy</a></p>
             <p><a href="terms-of-service.html">Terms of Service</a></p>
+            <p><a href="sms-terms.html">SMS Terms & Conditions</a></p>
             <p><a href="dot-license.html">DOT License</a></p>
           </div>
         </div>
@@ -192,4 +199,5 @@
 </body>
 
 </html>
+
 
