--- a/products.html
+++ b/products.html
@@ -211,7 +211,7 @@
           <div class="footer-box padding-footer">
             <h3>Contact Info</h3>
             <h4><i class="fa-solid fa-phone"></i> <a href="tel:6199448954">619-944-8954</a></h4>
-            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:decam9@gmail.com">decam9@gmail.com</a></h4>
+            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a></h4>
             <h4><i class="fa-solid fa-location-dot"></i> 16038 3rd PI S Unit c <br> Burien, WA 98148</h4>
           </div>
         </div>
@@ -221,6 +221,7 @@
           <div class="footer-bottom-text-three">
             <p><a href="privacy-policy.html">Privacy Policy</a></p>
             <p><a href="terms-of-service.html">Terms of Service</a></p>
+            <p><a href="sms-terms.html">SMS Terms & Conditions</a></p>
             <p><a href="dot-license.html">DOT License</a></p>
           </div>
         </div>
@@ -233,4 +234,5 @@
 </body>
 
 </html>
+
 
